# ocaml-ai-sdk

./: .gitignore  .ocamlformat  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  ai-sdk-react.opam  claude_agent_sdk.opam  dune-project  ocaml-ai-sdk.opam  package-lock.json  package.json
.serena/: project.yml
.serena/memories/: anthropic_provider_implementation.md  complete_file_reference.md  core_layer_and_utilities.md  development_commands.md  examples_and_usage_patterns.md  project_overview.md  provider_system_architecture.md
bindings/ai-sdk-react/: README.md  dune  types.ml  types.mli
claude-agent-sdk/: .ocamlformat  Makefile
claude-agent-sdk/examples/: dune  multi_turn.ml  one_shot.ml  session_resume.ml
claude-agent-sdk/lib/: claude_agent_sdk.ml  client.ml  client.mli  dune  message.ml  message.mli  options.ml  options.mli  query.ml  query.mli  transport.ml  transport.mli  types.ml  types.mli
claude-agent-sdk/test/: dune  test_parse.ml
claude-agent-sdk/tool/: dune  main.ml
docs/: UPSTREAM_INTEROP.md  upstream-bump-analysis-2026-04-08.md  upstream-deps-updated.md  violations.md
docs/plans/: 2026-03-05-anthropic-provider-design.md  2026-03-05-core-sdk-design.md  2026-03-05-implementation-plan.md  2026-03-05-provider-abstraction-design.md  2026-03-06-ai-sdk-react-bindings-design.md  2026-03-25-output-api.md  2026-03-26-cross-language-testing-strategy.md  2026-03-26-v2-roadmap.md  2026-03-26-v3-roadmap.md  2026-04-02-openrouter-upstream-parity.md  2026-04-06-openrouter-playground.md  2026-04-08-retry-with-backoff.md  2026-04-08-smooth-stream.md  2026-04-10-telemetry.md
examples/: agent_loop.ml  chat_server.ml  dune  generate.ml  one_shot.ml  smooth_streaming.ml  stream_chat.ml  streaming.ml  structured_output.ml  telemetry_logging.ml  thinking.ml  tool_use.ml
examples/ai-e2e/: README.md  chat_layout.mlx  chat_message.mlx  client_tools.mlx  package-lock.json  package.json  router.ml  tool_approval.mlx
examples/ai-e2e/server/: main.ml
examples/chat_server/: README.md  app.jsx  dune  main.ml  package.json
examples/custom_stream/: README.md  package-lock.json  package.json
examples/melange_chat/: README.md  app.mlx  package-lock.json  package.json
examples/openrouter-playground/: README.md  build.js  dune  index.html  main.mlx  package-lock.json  package.json
examples/openrouter-playground/server/: dune  main.ml
frontend/: app.jsx  build.js  package.json  server.js
lib/: dune
lib/ai_core/: ai_core.ml  ai_core.mli  core_tool.ml  core_tool.mli  dune  generate_text.ml  generate_text.mli  generate_text_result.ml  generate_text_result.mli  json_schema_validator.ml  json_schema_validator.mli  output.ml  output.mli  prompt_builder.ml  prompt_builder.mli  retry.ml  retry.mli  server_handler.ml  server_handler.mli  smooth_stream.ml  smooth_stream.mli  stop_condition.ml  stop_condition.mli  stream_text.ml  stream_text.mli  stream_text_result.ml  stream_text_result.mli  telemetry.ml  telemetry.mli  text_stream_part.ml  text_stream_part.mli  ui_message_chunk.ml  ui_message_chunk.mli  ui_message_stream.ml  ui_message_stream_writer.ml  ui_message_stream_writer.mli
lib/ai_provider/: ai_provider.ml  ai_provider.mli  call_options.ml  call_options.mli  content.ml  content.mli  dune  finish_reason.ml  finish_reason.mli  generate_result.ml  generate_result.mli  http_client.ml  http_client.mli  http_timeouts.ml  http_timeouts.mli  mode.ml  mode.mli  provider_error.ml  provider_error.mli  provider_options.ml  provider_options.mli  sse.ml  stream_part.ml  stream_part.mli  stream_result.ml  stream_result.mli  tool.ml  tool.mli  tool_choice.ml  usage.ml  (+4 more)
test/: dune
test/ai_provider/: dune  test_call_options.ml  test_foundation_types.ml  test_http_client.ml  test_http_timeouts.ml  test_integration.ml  test_prompt.ml  test_provider_options.ml  test_sse.ml  test_tool_mode_content.ml
(+98 files in other folders)
