(executables
 (names
  one_shot
  streaming
  tool_use
  thinking
  generate
  stream_chat
  agent_loop
  smooth_streaming
  structured_output
  telemetry_logging)
 (libraries
  ai_provider
  ai_provider_anthropic
  ai_core
  lwt
  lwt.unix
  yojson
  melange-json-native
  ppx_deriving_jsonschema.runtime
  re2
  trace.core
  trace-tef)
 (preprocess
  (pps lwt_ppx melange-json-native.ppx ppx_deriving_jsonschema)))
